# openmv_h7_bsp

./: .gitignore  Cargo.toml  README.md  build.rs  openocd.cfg  openocd.gdb  segger.gdb  start_gdb_server_jlink.sh  stm32h743vi_memory.x  stm32h743zi_memory.x
.cargo/: config
examples/: blinky.rs  play.rs
src/: board.rs  dcmi.rs  lib.rs  peripherals.rs
